Bump com.github.librepdf:openpdf from 2.4.0 to 3.0.0 (#840)
* Bump com.github.librepdf:openpdf from 2.4.0 to 3.0.0

Bumps com.github.librepdf:openpdf from 2.4.0 to 3.0.0.

---
updated-dependencies:
- dependency-name: com.github.librepdf:openpdf
  dependency-version: 3.0.0
  dependency-type: direct:production
  update-type: version-update:semver-major
...

Signed-off-by: dependabot[bot] <support@github.com>

* Fixing imports

* Fixing imports

* Fixing tests

* Tests

* Tests

* Tests

---------

Signed-off-by: dependabot[bot] <support@github.com>
Co-authored-by: dependabot[bot] <49699333+dependabot[bot]@users.noreply.github.com>
Co-authored-by: Marc P <mperlman@codeforamerica.org>